# oxidekit-core

./: .gitignore  AUTHORS.md  CLAUDE.md  COMPETITOR_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  GAPS_AND_TODOS.md  LICENSE  README.md  SECURITY.md  TRADEMARK.md
crates/oxide-a11y/: Cargo.toml
crates/oxide-a11y/src/: focus.rs  lib.rs  role.rs  state.rs  tree.rs
crates/oxide-admin/: Cargo.toml
crates/oxide-admin/src/: lib.rs
crates/oxide-admin/src/components/: alert.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  card.rs  chart.rs  command_palette.rs  empty_state.rs  form.rs  icon.rs  mod.rs  modal.rs  progress.rs  radio.rs  sidebar.rs  skeleton.rs  slider.rs  table.rs  tabs.rs  toast.rs  tokens.rs  tooltip.rs  topbar.rs
crates/oxide-admin/src/state/: admin_state.rs  mod.rs  plugin.rs  project.rs  settings.rs  theme.rs  updates.rs
crates/oxide-admin/src/utils/: colors.rs  formatting.rs  mod.rs
crates/oxide-admin/src/views/: dashboard.rs  diagnostics.rs  layout.rs  mod.rs  plugins.rs  projects.rs  settings.rs  themes.rs  updates.rs
crates/oxide-ai/: Cargo.toml
crates/oxide-ai/src/: context.rs  design_pack.rs  export.rs  extensions.rs  lib.rs  mcp.rs  prompts.rs  recipes.rs  schema.rs  validation.rs
crates/oxide-animation/: Cargo.toml
crates/oxide-animation/src/: controller.rs  curve.rs  lib.rs  spring.rs  tween.rs  value.rs
crates/oxide-backend/: Cargo.toml
crates/oxide-backend/src/: auth.rs  deploy.rs  lib.rs  naming.rs  openapi.rs  scaffold.rs
crates/oxide-branding/: Cargo.toml
crates/oxide-branding/src/: app_pack.rs  asset.rs  brand_pack.rs  compliance.rs  error.rs  export.rs  governance.rs  inheritance.rs  lib.rs  white_label.rs
crates/oxide-charts/: Cargo.toml
crates/oxide-charts/src/: animation.rs  axis.rs  chart.rs  legend.rs  lib.rs  series.rs  theme.rs  tooltip.rs
crates/oxide-charts/src/charts/: bar.rs  gauge.rs  line.rs  mod.rs  pie.rs  scatter.rs  sparkline.rs
crates/oxide-cli/: Cargo.toml
crates/oxide-cli/src/: main.rs
crates/oxide-cli/src/commands/: admin.rs  brand.rs  build.rs  check.rs  compat.rs  dev.rs  diagnostics.rs  docs.rs  doctor.rs  export.rs  figma.rs  fmt.rs  i18n.rs  init.rs  learn.rs  legal.rs  lint.rs  metrics.rs  migrate.rs  mobile.rs  mod.rs  new.rs  plugin.rs  quality.rs  run.rs  starters.rs  version.rs
crates/oxide-client-gen/: Cargo.toml
crates/oxide-client-gen/src/: contract_lint.rs  lib.rs  rust_client.rs  typescript_client.rs
crates/oxide-code-editor/: Cargo.toml
crates/oxide-code-editor/src/: diff.rs  editor.rs  lib.rs
crates/oxide-code-editor/src/features/: complete.rs  cursors.rs  folding.rs  mod.rs  search.rs
crates/oxide-code-editor/src/syntax/: highlighter.rs  languages.rs  mod.rs  themes.rs
crates/oxide-code-editor/src/view/: gutter.rs  line_numbers.rs  minimap.rs  mod.rs
crates/oxide-color-picker/: Cargo.toml
crates/oxide-color-picker/src/: color.rs  formats.rs  lib.rs
crates/oxide-compat/: Cargo.toml
crates/oxide-compat/docs/: MIGRATION.md
crates/oxide-compat/src/: gap_filler.rs  jsruntime.rs  lib.rs  migration.rs  naming.rs  npm.rs  policy.rs  scaffold.rs  webview.rs
crates/oxide-compiler/: Cargo.toml
crates/oxide-compiler/src/: lexer.rs  lib.rs  parser.rs  static_gen.rs
crates/oxide-components/: Cargo.toml
crates/oxide-components/src/: accessibility.rs  lib.rs  registry.rs  responsive.rs  spec.rs  theme.rs  typography.rs  validation.rs
crates/oxide-components/src/animation/: controller.rs  easing.rs  gesture.rs  interpolate.rs  mod.rs  motion_tokens.rs  state.rs  timeline.rs  transition.rs
crates/oxide-components/src/specs/: buttons.rs  dialogs.rs  mod.rs  navigation.rs  selection.rs  text_fields.rs
crates/oxide-crypto/: Cargo.toml
crates/oxide-crypto/src/: bitcoin.rs  core.rs  error.rs  ethereum.rs  keys.rs  lib.rs  nodeops.rs  policy.rs  rpc.rs  starters.rs
crates/oxide-datetime/: Cargo.toml
crates/oxide-datetime/src/: date_picker.rs  date_range.rs  lib.rs  locale.rs  utils.rs
crates/oxide-deploy/: Cargo.toml
crates/oxide-deploy/src/: ci.rs  env_schema.rs  error.rs  lib.rs  ports.rs  secrets.rs  templates.rs  validate.rs
crates/oxide-devtools/: Cargo.toml
crates/oxide-devtools/src/: actions.rs  code_export.rs  editor.rs  inspector.rs  lib.rs  overlay.rs  patch.rs  profiler.rs  shortcuts.rs  token_editor.rs  tree.rs
crates/oxide-devtools/src/hot_reload/: compiler.rs  events.rs  mod.rs  overlay.rs  runtime.rs  server.rs  state.rs  tests.rs  watcher.rs
crates/oxide-devtools/src/mobile/: diagnostics.rs  inspector.rs  mod.rs  performance.rs
crates/oxide-diagnostics/: Cargo.toml
crates/oxide-diagnostics/src/: bundle.rs  crash.rs  error.rs  event.rs  lib.rs  redact.rs  report.rs
crates/oxide-dialog/: Cargo.toml
crates/oxide-dialog/src/: alert.rs  confirm.rs  dialog.rs  lib.rs  options.rs  prompt.rs
crates/oxide-dnd/: Cargo.toml
crates/oxide-dnd/src/: events.rs  lib.rs
crates/oxide-docs/: Cargo.toml
crates/oxide-docs/src/: error.rs  lib.rs  manifest.rs  types.rs
crates/oxide-docs/src/bundler/: archive.rs  builder.rs  mod.rs  renderer.rs
crates/oxide-figma/: Cargo.toml
crates/oxide-figma/src/: api.rs  assets.rs  components.rs  diff.rs  error.rs  layout.rs  lib.rs  local.rs  sync.rs  tokens.rs  translator.rs  types.rs  validation.rs
crates/oxide-file-picker/: Cargo.toml
crates/oxide-file-picker/src/: directory.rs  drop.rs  lib.rs  open.rs  save.rs  types.rs
crates/oxide-forms/: Cargo.toml
crates/oxide-forms/src/: async_validator.rs  error.rs  field.rs  lib.rs  mode.rs  validator.rs
crates/oxide-i18n/: Cargo.toml
crates/oxide-i18n/src/: error.rs  extractor.rs  format.rs  lib.rs  locale.rs  macros.rs  pluralization.rs  rtl.rs  runtime.rs  validation.rs
crates/oxide-icons/: Cargo.toml
crates/oxide-icons/src/: data.rs  icon.rs  lib.rs
crates/oxide-image/: Cargo.toml
crates/oxide-image/src/: avatar.rs  cache.rs  component.rs  error.rs  formats.rs  gallery.rs  lazy.rs  lib.rs  loader.rs  optimize.rs  transform.rs
crates/oxide-init/: Cargo.toml
crates/oxide-init/src/: lib.rs  manifest.rs
docs-site/: oxide.toml
(+478 files in other folders)
