[package]
name = "oxide-a11y"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Comprehensive accessibility system for OxideKit with WAI-ARIA compliance"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Bitflags for efficient state representation
bitflags = "2.4"

[dev-dependencies]
pretty_assertions = "1.4"
