[package]
name = "oxide-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OxideKit AI Connector - MCP server, machine-readable docs, and template extraction"

[dependencies]
# Internal crates
oxide-compiler.workspace = true
oxide-components.workspace = true
oxide-diagnostics.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true

# Time and IDs
chrono.workspace = true
uuid.workspace = true

# URL handling
url.workspace = true

# File system operations
walkdir.workspace = true

# For MCP server HTTP transport
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1.5", features = ["full"] }

# JSON-RPC for MCP protocol
jsonrpsee = { version = "0.24", features = ["server"] }

# Regex for search
regex = "1.11"

# Semver for version comparison
semver = "1.0"

[dev-dependencies]
tempfile = "3.24"
tokio-test = "0.4"
