[package]
name = "oxide-backend"
description = "Backend builder tooling for OxideKit - contract-first API development"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# File operations
walkdir = { workspace = true }

# Path manipulation
camino = { workspace = true }

# Regex for naming validation
regex = { workspace = true }

# Time and IDs
chrono = { workspace = true }
uuid = { workspace = true }

# OpenAPI parsing
openapiv3 = "2.0"
indexmap = "2.0"

# Template rendering
handlebars = "6.3"

# Internal crates
oxide-network = { workspace = true }

[dev-dependencies]
tempfile = "3.14"

[features]
default = []
