[package]
name = "oxide-code-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OxideKit code editor component with syntax highlighting, code intelligence, and diff view"

[dependencies]
oxide-render.workspace = true
oxide-text.workspace = true
oxide-components.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
once_cell.workspace = true
similar.workspace = true
unicode-segmentation = "1.11"
unicode-width = "0.2"
ropey = "1.6"

[dev-dependencies]
