[package]
name = "oxide-compat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OxideKit Compatibility Layers - WebView, JS runtime, and migration helpers for Electron/Tauri users"

[features]
default = []
# WebView compatibility layer (NOT RECOMMENDED - adds web surface)
webview = ["wry", "tao"]
# JavaScript runtime compatibility layer (NOT RECOMMENDED - adds JS execution)
js-runtime = ["rquickjs"]
# NPM build tooling (requires Node.js at build time)
npm-tooling = []
# Migration helpers
migration = []
# AI gap-filler integration
ai-gap-filler = ["oxide-ai"]
# Full compatibility suite (NOT RECOMMENDED for production)
full = ["webview", "js-runtime", "npm-tooling", "migration", "ai-gap-filler"]

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Time and IDs
chrono.workspace = true
uuid.workspace = true

# File operations
walkdir.workspace = true

# Async runtime
tokio.workspace = true

# URL handling
url.workspace = true

# Regex for parsing/validation
regex = "1.11"

# Semver for version comparison
semver = "1.0"

# Cryptographic hashing for lockfiles
sha2 = "0.10"
hex = "0.4"

# WebView support (optional, feature-gated)
wry = { version = "0.48", optional = true }
tao = { version = "0.30", optional = true }

# JavaScript runtime (optional, feature-gated)
rquickjs = { version = "0.8", optional = true, features = ["full-async"] }

# AI integration (optional)
oxide-ai = { path = "../oxide-ai", optional = true }

# For scaffold generation
handlebars = "6.3"

[dev-dependencies]
tempfile = "3.15"
tokio-test = "0.4"
