[package]
name = "oxide-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OxideKit UI compiler (.oui -> IR)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
