[package]
name = "oxide-components"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OxideKit UI component system, registry, and theming"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true

# For component rendering
oxide-layout.workspace = true
oxide-render.workspace = true
oxide-text.workspace = true
