[package]
name = "oxide-deploy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OxideKit deployment configuration, environment management, and deployment template generation"

[features]
default = ["templates", "secrets", "ci"]
# Deployment template generation
templates = []
# Secret handling
secrets = []
# CI workflow generation
ci = []
# All features
full = ["templates", "secrets", "ci"]

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
walkdir.workspace = true
regex.workspace = true

# Additional dependencies
sha2 = "0.10"
hex = "0.4"
once_cell = "1.20"
glob = "0.3"

[dev-dependencies]
tempfile = "3.24"
