[package]
name = "oxide-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OxideKit diagnostics and production-safe error reporting"

[features]
default = []
# Full diagnostics with bundle export (for release+diagnostics builds)
full = ["bundle-export", "auto-report", "crash-handler"]
# Enable diagnostics bundle export
bundle-export = []
# Enable optional auto-reporting (requires explicit opt-in)
auto-report = ["reqwest", "tokio"]
# Enable crash handler
crash-handler = []
# Development-only features (never ship in release)
devtools = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true

# For timestamps
chrono = { version = "0.4", features = ["serde"] }

# For unique IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# For pattern matching in redaction
regex-lite = "0.1"

# Optional: for auto-reporting
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1.0", features = ["time"], optional = true }
