[package]
name = "oxide-figma"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OxideKit Figma Translator - Design to code bridge for semantic component mapping"

[dependencies]
# OxideKit internal crates
oxide-components.workspace = true

# HTTP client for Figma API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# URL parsing
url.workspace = true

# File operations
walkdir.workspace = true

# Time and IDs
chrono.workspace = true
uuid.workspace = true

# Image processing for asset downloads
image = { version = "0.24", default-features = false, features = ["png", "webp"] }

# Path manipulation
camino = "1.1"

# Diffing for sync
similar = "2.6"

# Regex for pattern matching
regex = "1.10"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.24"
