[package]
name = "oxide-i18n"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OxideKit internationalization (i18n) system with team workflow support"

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# File operations
walkdir.workspace = true

# Async runtime
tokio.workspace = true

# Time and IDs
chrono.workspace = true
uuid.workspace = true

# CLI integration
clap.workspace = true

# Regex for key extraction
regex = "1.10"

# Lazy initialization
once_cell = "1.20"

# XML parsing for XLIFF format
quick-xml = { version = "0.31", features = ["serialize"] }

# Fuzzy string matching for translation memory
strsim = "0.11"

# Hashing for content-based keys and lock files
sha2 = "0.10"
hex = "0.4"

# Globbing for file discovery
glob = "0.3"

# Diff generation for review workflow
similar = "2.6"

# Async trait support
async-trait = "0.1"

# HTTP client for translation services (optional)
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = []
services = ["reqwest"]
full = ["services"]

[dev-dependencies]
tempfile = "3.14"
