[package]
name = "oxide-init"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OxideKit project initialization wizard and manifest management"

[dependencies]
# CLI interaction
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"

# Serialization
serde.workspace = true
toml.workspace = true
serde_json.workspace = true

# Utilities
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true

# File operations
walkdir.workspace = true

# Internal crates
oxide-starters.workspace = true

[dev-dependencies]
tempfile = "3.24"
